# lead-scoring

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 49ec235a15ed_initial_schema.py  ca7959e931e2_add_events_table_and_converted_at_to_.py  ff52009bc0c5_add_api_keys_table.py
config/: __init__.py  crm.yaml  features.yaml  settings.py
docs/: api.md  architecture.md  configuration.md  data-pipeline.md  database.md  deployment.md  ml-model.md
notebooks/: eda.ipynb
scripts/: generate_events.py  manage_keys.py  seed_db.py  train.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  exceptions.py  main.py  schemas.py
src/api/middleware/: auth.py  logging.py  rate_limit.py  request_id.py
src/api/routes/: admin.py  health.py  scoring.py  webhooks.py
src/ml/: dataset.py  preprocessing.py  serialization.py  trainer.py  tuning.py
src/models/: __init__.py  api_key.py  base.py  crm_sync_log.py  database.py  event.py  lead.py  model_registry.py  prediction.py
src/services/: ingestion.py  scoring.py
src/services/features/: __init__.py  computer.py  registry.py  validation.py
tests/: conftest.py
tests/fixtures/: leads_sample.csv
tests/integration/: test_db.py  test_events.py  test_feature_computer.py  test_generate_events.py  test_ingestion.py  test_training_pipeline.py
tests/integration/test_api/: conftest.py  test_admin_endpoints.py  test_scoring_endpoints.py  test_webhook_endpoints.py
tests/unit/: test_event_model.py  test_ingestion.py  test_models.py
(+35 files in other folders)
